--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ArchitectureExample</string>
+    <string name="note_database_name">note_database</string>
+    <string name="note_table_name">note_table</string>
 </resources>
